
[package]
name = "btc-pay-server"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.3.1"
# Bitcoin library
bitcoin = { version = "0.30.0", features = ["rand"] }
# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Database access (in-memory for prototype)
rusqlite = { version = "0.29.0", features = ["bundled"] }
# Async runtime
tokio = { version = "1.28.2", features = ["full"] }
# HTTP client for blockchain API
reqwest = { version = "0.11", features = ["json"] }
# UUID generation
uuid = { version = "1.3.3", features = ["v4", "serde"] }
# Logging
env_logger = "0.10.0"
log = "0.4"
# Time utilities
chrono = { version = "0.4", features = ["serde"] }
# For secure random number generation
rand = "0.8.5"
# Hex encoding/decoding
hex = "0.4.3"
