
[package]
name = "btc-pay-server"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.3.1"
# Bitcoin library
bitcoin = { version = "0.30.0", features = ["rand"] }
# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Database access (in-memory for prototype)
rusqlite = { version = "0.29.0", features = ["bundled"] }
# Async runtime
tokio = { version = "1.28.2", features = ["full"] }
# HTTP client for blockchain API
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
# UUID generation
uuid = { version = "1.3.3", features = ["v4", "serde"] }
# Logging
env_logger = "0.10.0"
log = "0.4"
# Time utilities
chrono = { version = "0.4", features = ["serde"] }
# For secure random number generation
rand = "0.8.5"
# Hex encoding/decoding
hex = "0.4.3"
jsonwebtoken = "9.3.1"
# Rate limiting dependencies
futures = "0.3"
# Security-related dependencies
hmac = "0.12"
sha2 = "0.10"
ring = "0.16"
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# Removed conflicting dependencies
# If needed, we can implement our own trezor interface instead of using these libraries
# Or use a different hardware wallet library that doesn't have these conflicts
zeroize = "1.3.0"
